--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,6 @@ JWT_SECRET=$2b$10$5NIr8ARJ4GCF0yoyMFeuseykzzuIYLd5AlOh0otH2tLKrmCuKyNCi
 PORT=3001
 NODE_ENV=development
 CLIENT_URL=http://localhost:5173
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASS=your_app_password
+VITE_API_BASE_URL=http://localhost:3001/api
