--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.365.0",
+    "pdfjs-dist": "^5.4.296",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
@@ -52,6 +53,8 @@
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.8.2",
+    "react-pdf": "^10.2.0",
+    "react-player": "^3.3.3",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.30.1",
     "react-use": "^17.5.0",
