--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,8 @@ MONGODB_URI=mongodb://127.0.0.1:27017/youth-computing-api
 JWT_SECRET=$2b$10$5NIr8ARJ4GCF0yoyMFeuseykzzuIYLd5AlOh0otH2tLKrmCuKyNCi
 PORT=3001
 NODE_ENV=development
+FRONTEND_URL=http://localhost:5173
 CLIENT_URL=http://localhost:5173
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASS=your_app_password
+EMAIL_USER=johnsonlabygabriel@gmail.com
+EMAIL_PASS=djeb lruo pilg cpko
 VITE_API_BASE_URL=http://localhost:3001/api
