--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^7.0.6",
     "pdfkit": "^0.17.2",
     "sanitize-html": "^2.17.0",
+    "sharp": "^0.34.4",
     "socket.io": "^4.8.1",
     "winston": "^3.17.0",
     "zod": "^4.1.11"
